[gd_scene load_steps=36 format=2]

[ext_resource path="res://assets/UI/immune_system/room/level-cont.png" type="Texture" id=1]
[ext_resource path="res://assets/UI/immune_system/room/tall-blue.png" type="Texture" id=2]
[ext_resource path="res://src/scenes/immune_system/base_game/Level-lb.gd" type="Script" id=3]
[ext_resource path="res://src/scenes/immune_system/base_game/Lymphocyte.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/UI/immune_system/room/red-cell-container.png" type="Texture" id=6]
[ext_resource path="res://assets/UI/immune_system/room/sm-blue.png" type="Texture" id=7]
[ext_resource path="res://assets/UI/immune_system/room/wall-3.png" type="Texture" id=8]
[ext_resource path="res://src/scenes/immune_system/base_game/blood-cell.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/UI/immune_system/room/bg-blue.png" type="Texture" id=10]
[ext_resource path="res://assets/UI/buttons/swords_game.png" type="Texture" id=11]
[ext_resource path="res://src/scenes/immune_system/base_game/Game.gd" type="Script" id=12]
[ext_resource path="res://assets/ttf/SpaceGrotesk-SemiBold.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://src/scenes/immune_system/base_game/HealthScore.gd" type="Script" id=14]
[ext_resource path="res://src/scenes/immune_system/base_game/Virus.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/scenes/immune_system/base_game/Button.gd" type="Script" id=16]
[ext_resource path="res://assets/sounds/background_sounds/immune_system.mp3" type="AudioStream" id=17]
[ext_resource path="res://font.tres" type="DynamicFont" id=18]
[ext_resource path="res://src/scenes/immune_system/base_game/Starting-messages.gd" type="Script" id=19]
[ext_resource path="res://assets/UI/immune_system/room/dialog-box.png" type="Texture" id=20]
[ext_resource path="res://assets/UI/elements/close.png" type="Texture" id=21]
[ext_resource path="res://assets/UI/elements/help.png" type="Texture" id=22]
[ext_resource path="res://assets/UI/immune_system/room/md-blue.png" type="Texture" id=23]
[ext_resource path="res://assets/UI/immune_system/room/wall-blue.png" type="Texture" id=24]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 491.299, 99.9624 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 154, 5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 850.379, 580.602 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 281, 43.5 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 212.5, 35.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 126.481, 100.577 )

[sub_resource type="DynamicFontData" id=25]
font_path = "res://assets/ttf/rimouski sb.otf"

[sub_resource type="DynamicFont" id=26]
size = 100
outline_size = 1
outline_color = Color( 0.290196, 0.0509804, 0.270588, 1 )
use_filter = true
font_data = SubResource( 25 )

[sub_resource type="DynamicFont" id=2]
size = 27
font_data = ExtResource( 13 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 42.75, 28 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 74.5, 45.5 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 148.75, 230 )

[node name="RoomOne" type="Node2D"]
script = ExtResource( 12 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1024, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 515, 302.875 )
scale = Vector2( 0.315345, 0.263567 )
texture = ExtResource( 10 )

[node name="game_items" type="Node2D" parent="."]

[node name="Wall-3" type="Sprite" parent="game_items"]
position = Vector2( 701, 161 )
scale = Vector2( 0.178899, 0.406278 )
texture = ExtResource( 24 )

[node name="StaticBody2D" type="StaticBody2D" parent="game_items/Wall-3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="game_items/Wall-3/StaticBody2D"]
position = Vector2( -11.1797, 15.7218 )
shape = SubResource( 4 )

[node name="Virus" parent="game_items" instance=ExtResource( 15 )]
position = Vector2( 2461, 408 )
scale = Vector2( 0.395149, 0.388287 )
current_stage = 2

[node name="blood-cell" parent="game_items" instance=ExtResource( 9 )]
position = Vector2( 465, 223 )
rotation = 3.14159
scale = Vector2( 0.0826342, -0.0829205 )

[node name="blood-cell2" parent="game_items" instance=ExtResource( 9 )]
position = Vector2( 665, 108 )
rotation = 3.14159
scale = Vector2( 0.0826342, -0.0829205 )

[node name="blood-cell3" parent="game_items" instance=ExtResource( 9 )]
position = Vector2( 729, 108 )
rotation = 3.14159
scale = Vector2( 0.0826342, -0.0829205 )

[node name="blood-cell4" parent="game_items" instance=ExtResource( 9 )]
position = Vector2( 1627, 286 )
rotation = 3.14159
scale = Vector2( 0.0826342, -0.0829205 )

[node name="blood-cell5" parent="game_items" instance=ExtResource( 9 )]
position = Vector2( 1729, 286 )
rotation = 3.14159
scale = Vector2( 0.0826342, -0.0829205 )

[node name="blood-cell6" parent="game_items" instance=ExtResource( 9 )]
position = Vector2( 1178, 494 )
rotation = 3.14159
scale = Vector2( 0.0826342, -0.0829205 )

[node name="Lymphocyte" parent="game_items" groups=["Player"] instance=ExtResource( 4 )]
position = Vector2( 49, 353 )

[node name="Tall-wall" type="Node2D" parent="game_items"]
position = Vector2( 33, 40 )

[node name="Tall-wall2" type="Sprite" parent="game_items/Tall-wall"]
position = Vector2( 203.5, 479.906 )
scale = Vector2( 0.17698, 0.225628 )
texture = ExtResource( 2 )

[node name="Tall-wall" type="Sprite" parent="game_items/Tall-wall"]
position = Vector2( 124.118, 479.906 )
scale = Vector2( 0.272277, 0.225628 )
texture = ExtResource( 2 )
offset = Vector2( -228.141, -0.000244141 )

[node name="StaticBody2D" type="StaticBody2D" parent="game_items/Tall-wall"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="game_items/Tall-wall/StaticBody2D"]
position = Vector2( 115, 347 )
shape = SubResource( 12 )

[node name="StaticBody2D2" type="StaticBody2D" parent="game_items/Tall-wall"]
position = Vector2( 86.5, 727.156 )
scale = Vector2( 0.210396, 0.225628 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="game_items/Tall-wall/StaticBody2D2"]
position = Vector2( 137.835, -1095.41 )
scale = Vector2( 0.841176, 1 )
shape = SubResource( 6 )

[node name="Node" type="Node2D" parent="game_items"]

[node name="Sprite" type="Sprite" parent="game_items/Node"]
position = Vector2( 1003, 577 )
scale = Vector2( 0.309449, 0.4 )
texture = ExtResource( 23 )
offset = Vector2( -129.261, -50 )

[node name="Sprite2" type="Sprite" parent="game_items/Node"]
position = Vector2( 1189.25, 577 )
scale = Vector2( 0.309449, 0.4 )
texture = ExtResource( 23 )
offset = Vector2( -129.261, -50 )

[node name="Sprite3" type="Sprite" parent="game_items/Node"]
position = Vector2( 1374, 577 )
scale = Vector2( 0.309449, 0.4 )
texture = ExtResource( 23 )
offset = Vector2( -129.261, -50 )

[node name="StaticBody2D" type="StaticBody2D" parent="game_items/Node"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="game_items/Node/StaticBody2D"]
position = Vector2( 1147, 555 )
shape = SubResource( 20 )

[node name="Node3" type="Node2D" parent="game_items"]
position = Vector2( 976, 0 )

[node name="Sprite5" type="Sprite" parent="game_items/Node3"]
position = Vector2( 1091, -121 )
scale = Vector2( 0.227559, 0.308333 )
texture = ExtResource( 23 )
offset = Vector2( 78.0015, 2224.87 )

[node name="Sprite6" type="Sprite" parent="game_items/Node3"]
position = Vector2( 1227, -121 )
scale = Vector2( 0.227559, 0.308333 )
texture = ExtResource( 23 )
offset = Vector2( 78.0015, 2224.87 )

[node name="Sprite7" type="Sprite" parent="game_items/Node3"]
position = Vector2( 1363, -121 )
scale = Vector2( 0.227559, 0.308333 )
texture = ExtResource( 8 )
offset = Vector2( 78.0015, 2224.87 )

[node name="StaticBody2D" type="StaticBody2D" parent="game_items/Node3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="game_items/Node3/StaticBody2D"]
position = Vector2( 1240.5, 566.5 )
shape = SubResource( 15 )

[node name="Node3" type="Node2D" parent="game_items/Node3"]
position = Vector2( 216, 0 )

[node name="Sprite5" type="Sprite" parent="game_items/Node3/Node3"]
position = Vector2( 1091, -121 )
scale = Vector2( 0.227559, 0.308333 )
texture = ExtResource( 23 )
offset = Vector2( 78.0015, 2224.87 )

[node name="Sprite6" type="Sprite" parent="game_items/Node3/Node3"]
position = Vector2( 1227, -121 )
scale = Vector2( 0.227559, 0.308333 )
texture = ExtResource( 23 )
offset = Vector2( 78.0015, 2224.87 )

[node name="Sprite7" type="Sprite" parent="game_items/Node3/Node3"]
position = Vector2( 1363, -121 )
scale = Vector2( 0.227559, 0.308333 )
texture = ExtResource( 23 )
offset = Vector2( 78.0015, 2224.87 )

[node name="StaticBody2D" type="StaticBody2D" parent="game_items/Node3/Node3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="game_items/Node3/Node3/StaticBody2D"]
position = Vector2( 1240.5, 566.5 )
shape = SubResource( 15 )

[node name="blood-flow" type="Node2D" parent="game_items"]

[node name="Wall-sm" type="Sprite" parent="game_items"]
position = Vector2( 470.999, 275 )
scale = Vector2( 0.395317, 0.367876 )
texture = ExtResource( 7 )

[node name="StaticBody2D" type="StaticBody2D" parent="game_items/Wall-sm"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="game_items/Wall-sm/StaticBody2D"]
position = Vector2( -2.52612, 10.8738 )
shape = SubResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer"]
margin_top = 12.0
margin_right = 1256.0
margin_bottom = 506.0
rect_scale = Vector2( 0.13289, 0.132345 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="CanvasLayer/TextureRect3"]
margin_left = 497.0
margin_top = 144.0
margin_right = 640.0
margin_bottom = 273.0
rect_scale = Vector2( 2.20951, 1.95931 )
custom_colors/font_color = Color( 0.290196, 0.0509804, 0.270588, 1 )
custom_fonts/font = SubResource( 26 )
text = "0"
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
margin_left = 866.0
margin_top = 20.0
margin_right = 1389.0
margin_bottom = 273.0
rect_scale = Vector2( 0.249612, 0.268798 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 940.0
margin_top = 36.0
margin_right = 970.0
margin_bottom = 71.0
custom_colors/font_color = Color( 0.372549, 0.0196078, 0.160784, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
script = ExtResource( 14 )

[node name="help" type="TextureButton" parent="CanvasLayer"]
margin_left = 6.10352e-05
margin_top = 521.0
margin_right = 150.0
margin_bottom = 671.0
rect_scale = Vector2( 0.580859, 0.595155 )
texture_normal = ExtResource( 22 )

[node name="Starting-messages" type="Area2D" parent="CanvasLayer"]
script = ExtResource( 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Starting-messages"]
position = Vector2( 44.25, 387 )
shape = SubResource( 19 )

[node name="Button" type="TextureButton" parent="."]
visible = false
margin_left = 2449.0
margin_top = 474.0
margin_right = 2659.0
margin_bottom = 686.0
rect_scale = Vector2( 0.614114, 0.57683 )
texture_normal = ExtResource( 11 )
script = ExtResource( 16 )
nextScene = "res://src/scenes/immune_system/minigames/definitions/Main.tscn"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )
pitch_scale = 0.5
autoplay = true
attenuation = 1.10957

[node name="lost_challenge_area2" type="Area2D" parent="."]
position = Vector2( 2143, 485 )

[node name="lost_challenge_obj" type="CollisionShape2D" parent="lost_challenge_area2"]
shape = SubResource( 16 )

[node name="Panel" type="NinePatchRect" parent="."]
visible = false
margin_left = 2065.0
margin_top = 31.0
margin_right = 2090.0
margin_bottom = 49.0
rect_scale = Vector2( 12.5832, 7.00485 )

[node name="TextureRect" type="TextureRect" parent="Panel"]
margin_right = 740.0
margin_bottom = 283.0
rect_scale = Vector2( 0.0319752, 0.0560977 )
texture = ExtResource( 20 )

[node name="Label" type="Label" parent="Panel"]
margin_left = 1.27148
margin_top = 4.28275
margin_right = 54.2715
margin_bottom = 39.2827
rect_scale = Vector2( 0.0578403, 0.0959942 )
custom_colors/font_color = Color( 0.905882, 0.905882, 0.905882, 1 )
custom_fonts/font = ExtResource( 18 )
text = "hola"

[node name="TextureButton" type="TextureButton" parent="Panel"]
margin_left = 21.0
margin_top = 1.0
margin_right = 161.0
margin_bottom = 141.0
rect_scale = Vector2( 0.00926061, 0.0149744 )
texture_normal = ExtResource( 21 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Node2D"]
position = Vector2( 1736.87, 557 )
scale = Vector2( 0.403082, 0.412999 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="Node2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/StaticBody2D"]
position = Vector2( 1736.25, 534 )
shape = SubResource( 21 )

[connection signal="area_entered" from="game_items/Virus" to="game_items/Lymphocyte" method="_on_Virus_area_entered"]
[connection signal="area_entered" from="game_items/Virus" to="game_items/Lymphocyte" method="_on_lost_challenge_area_entered"]
[connection signal="coin_collected" from="game_items/blood-cell" to="." method="_on_bloodcell_coin_collected"]
[connection signal="coin_collected" from="game_items/blood-cell" to="CanvasLayer/Label" method="_on_bloodcell_coin_collected"]
[connection signal="coin_collected" from="game_items/blood-cell2" to="." method="_on_bloodcell_coin_collected"]
[connection signal="coin_collected" from="game_items/blood-cell3" to="." method="_on_bloodcell_coin_collected"]
[connection signal="coin_collected" from="game_items/blood-cell4" to="." method="_on_bloodcell_coin_collected"]
[connection signal="coin_collected" from="game_items/blood-cell5" to="." method="_on_bloodcell_coin_collected"]
[connection signal="coin_collected" from="game_items/blood-cell6" to="." method="_on_bloodcell_coin_collected"]
[connection signal="button_up" from="Button" to="Button" method="_on_Button_button_up"]
[connection signal="area_entered" from="lost_challenge_area2" to="." method="_on_lost_challenge_area2_area_entered"]
[connection signal="area_entered" from="lost_challenge_area2" to="game_items/Lymphocyte" method="_on_lost_challenge_area2_area_entered"]
[connection signal="pressed" from="Panel/TextureButton" to="." method="_on_TextureButton_pressed"]
